Changes Character Description

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -189,11 +189,15 @@ margin-bottom:2vh;
 
 
 
+
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
+
 
 
 
@@ -368,7 +372,7 @@ The time to watch the great Berners Street Hoax pan out.
 	&lt;&lt;/linkappend&gt;&gt;
 &lt;&lt;/linkappend&gt;&gt;
                        
-</tw-passagedata><tw-passagedata pid="10" name="Church" tags="" position="5163,1071" size="100,100">As you go through the old wooden door of the Fakerstreet Church, the dark wood being held together by black steel bars, you enter a very long hallway, lined with supporting pillars to the left and right. The walls consisted of huge sandstone blocks; decorated with ornaments painted with a yellow tint. Your eyes can barely make out the wooden altar at the end of the hallway, as they are blinded by the white light casted from the majestic church window at the very end of the church ship. As you Walk through the Church, a figure dressed in black with a unnaturally stiff posture approaches you quickly, his feet moving in such a controlled, mechanical way make it seem as if his body is floating over the ground.  
+</tw-passagedata><tw-passagedata pid="10" name="Church" tags="" position="5163,1071" size="100,100">As you go through the old wooden door of the Fakerstreet Church, the dark wood being held together by black steel bars, you enter a very long hallway, lined with supporting pillars to the left and right. The walls consisted of huge sandstone blocks; decorated with ornaments painted with a yellow tint. Your eyes can barely make out the wooden altar at the end of the hallway, as they are blinded by the white light casted from the majestic church window at the very end of the nave. As you Walk through the Church, a figure dressed in black with a unnaturally stiff posture approaches you quickly, his feet moving in such a controlled, mechanical way make it seem as if his body is floating over the ground.  
 
 &lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/priest.png&quot;/&gt;//“Come closer my child. Welcome to the Fakerstreet church.”// The priest makes the sign of the cross as he looks down upon you before he rests his hands touching each other in front of his stomach //“I see you have a conflicted soul, how can I help you?”//
 
@@ -376,14 +380,14 @@ The time to watch the great Berners Street Hoax pan out.
 [[Father, I come to you with a great sadness. My masters mother is very close to death. and we need the consultant of god. please come by to 54 Bernerstreet as soon as possible. At Monday 10 o&#39;clock perhaps?-&gt;Character Priest]]
 [[Apology father,  but I need to go!-&gt;Faker Street]] </tw-passagedata><tw-passagedata pid="11" name="Weird Workshop" tags="" position="5015,543" size="100,100">You enter the Shop, and the first thing to catch your eye is some kind of flag hanging on the wall. The flag bears a white ground with a black eagle. It is the flag of Prussia. The workshop is filled with mysterious objects and apparatuses.
 
-&lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/inventor.png&quot;/&gt;A blonde man with a german accent, which you didn&#39;t even realize being here at first, starts talking to you from the side: //&quot;Welcome in my modest schopp! Everything you see iz for zale! I also take special rekwests.&quot;// 
+&lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/inventor.png&quot;/&gt;A dark haired man with a german accent, which you didn&#39;t even realize being here at first, starts talking to you from the side: //&quot;Welcome in my modest schopp! Everything you see iz for zale! I also take special rekwests.&quot;// 
 
 [[Go Back to the Street -&gt;Faker Street]] 
 [[Do you sell any weapons?]]
 [[Why did you come to London?]]
 
 
-</tw-passagedata><tw-passagedata pid="12" name="Weapons Shop" tags="" position="4346,605" size="100,100">You enter the Shop, everything is well organized. You see a number of rifles and pistols on display and in the corner you can also see a few blades and daggers, everything seems to be on sale. You walk up to the counter and ring the bell. An elderly man with a bushy beard shows up coming out of the workshop, he looks at you from above his reading glasses while he smiles.
+</tw-passagedata><tw-passagedata pid="12" name="Weapons Shop" tags="" position="4346,605" size="100,100">You enter the Shop, everything is well organized. You see a number of rifles and pistols on display and in the corner you can also see a few blades and daggers, everything seems to be on sale. You walk up to the counter and ring the bell. A man past his 40&#39;s with a trimmed beard shows up coming out of the workshop, he looks at you from above his reading glasses while he smiles.
 
 &lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/weaponsdealer.png&quot;/&gt;//&quot;Welcome, welcome… the name is George Attling, call me George. How can I help you sir? Are you looking for a weapon for self defence? Our rifles are in top condition. Or maybe a wedding gift? We have some nice gold plated dueling pistols with custom ornamentation.&quot;//
 
@@ -523,7 +527,7 @@ A gentleman sits on one of the many couches and two rather lightly dressed women
 [[Alternative Medicine]] 
 
 &lt;&lt;else&gt;&gt;
-You enter a small room and you wait a moment until your eyes adapt to the darkness in this store. Only a little ray of sunlight passes through a small opening between the curtains, with which someone seemingly tried to cover up all the windows inside the room. There is a counter and behind it several shelves filled with glasses of all kinds and shapes, sizes and colors. A short, old man past his sixties with thick eyeglasses sits behind the counter reading a book. His face expression is reminiscent of a motionless, dumbfounded mask. Calm, sad and probably extremely high on morphium. As you clear your throat, he looks up directly into your eyes. A moment passes. He still doesn’t say anything. 
+You enter a small room and you wait a moment until your eyes adapt to the darkness in this store. Only a little ray of sunlight passes through a small opening between the curtains, with which someone seemingly tried to cover up all the windows inside the room. There is a counter and behind it several shelves filled with glasses of all kinds and shapes, sizes and colors. A short man past his sixties with thick eyeglasses sits behind the counter reading a book. His face expression is reminiscent of a motionless, dumbfounded mask. Calm, happy and probably extremely high on morphium. As you clear your throat, he looks up directly into your eyes. A moment passes. He still doesn’t say anything. 
 
 &quot;Good day Sir, I want to order some medicine!&quot;
 
@@ -957,7 +961,7 @@ You take a closer look at a sporadic prototype of a camera that basically looks 
 &lt;&lt;set $photographer to true&gt;&gt;
 [[Bloxford Street]] </tw-passagedata><tw-passagedata pid="42" name="Hello?! Anybody home?" tags="" position="1759,1265" size="100,100">
 &lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/chalcographer.png&quot;/&gt;
-After a while, a small skinny man in ragged brown clothing enters the room from a back room behind the counter. He looks up to you, eyeing you from top to bottom, opens the strange lids of his horn glasses, somewhat reminiscent of some kind of microscopes and clears his throat.
+After a while, a small skinny man in ragged brown clothing enters the room from a back room behind the counter. He looks up to you, eyeing you from top to bottom, opens the strange lids of his glasses, somewhat reminiscent of some kind of microscopes and clears his throat.
 
 //&quot;I heard you, Sir, but i had to finish my work. You know, as an artist i need the flow. It’s hard to restart after getting disturbed.An artist like me needs to focus constantly to get the right result.&quot;//
 
@@ -1095,7 +1099,7 @@ The nuns disappeared in all this rumble in a sidealley.
 Benjamin Waters, the Priest arrives at the street. As he moves to his destination he gets greeted by the people with respect passing by. However, before arriving at the House a gang of young kids, mostly boys gather around him and start teasing him. They try to steal his suitcase and pull on his black clothing. At first the priest acted as if nothing happened, while the pedestrians on the street watch the situation from afar. Suddenly, the holy man loses his temper and and curses the lord in a shouting manner. the people, especially the women are shocked at his outrage. they will not forget that.
 
 &lt;&lt;set $tumutl +=6&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="56" name="Happening Prostitue" tags="" position="3361,2472" size="100,100">&lt;&lt;if $priest_present is true&gt;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="56" name="Happening Prostitue" tags="" position="3361,2463.6666666666665" size="100,100">&lt;&lt;if $priest_present is true&gt;&gt;
 A priest appears behind the corner and walks up to the House. He sees three nuns; but doesn&#39;t realize they&#39;re the prostitutes you ordered. Upon recognizing the nuns he approaches them saying: 
 //&quot; Hello sisters! What brings you here on such a sad day?&quot;//
 The three black dressed ladies look down on the priest.
